--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-mock-store": "^1.0.2",
     "@types/swiper": "^5.4.2",
     "@types/ws": "^7.4.4",
