--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/ws": "^7.4.4",
     "@vitejs/plugin-react-refresh": "^1.3.3",
     "apollo": "^2.33.2",
+    "codecov": "^3.8.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "redux-mock-store": "^1.5.4",
